--- a/templates/class/index.html.twig
+++ b/templates/class/index.html.twig
@@ -1,20 +1,45 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin.html.twig' %}
 
-{% block title %}Hello ClassController!{% endblock %}
+{% block title %}Hello ProductController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/studentasm/src/Controller/ClassController.php'|file_link(0) }}">src/Controller/ClassController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/studentasm/templates/class/index.html.twig'|file_link(0) }}">templates/class/index.html.twig</a></code></li>
-    </ul>
-</div>
+  <div className="page-heading pb-2 mt-4 mb-2 ">
+                    <h3>Manager</h3> <a href="{{path('class_create')}}"><button type="button" class="btn btn-outline-primary">Insert</button></a>
+                </div>
+                <div class="page-content">
+                <div class="btn-group" role="group" aria-label="Basic outlined example">
+               
+                </div>
+                <div class="card">
+                    <div class="container mb-3">
+                        <div class="table-responsive text-nowrap">
+                      <table class="table table-striped">
+                        <thead>
+                          <tr>
+                            <th>#</th>
+                            <th>Class Name</th>
+                            <th>Class Code</th>
+                            <th>Major</th>
+                            <th>Action</th>
+                          </tr>
+                        </thead>
+                        <tbody class="table-border-bottom-0">
+                          {% for c in class %}
+                              <tr>
+                                  <td>{{ c.id}}</td>
+                                  <td>{{ c.classname}}</td>
+                                  <td>{{ c.classcode}}</td>
+                                  <td>{{ c.major}}</td>
+                                  <td>
+                                    <a href="{{path('class_edit',{'id':c.id})}}">Edit</a>
+                                    <a href="{{path('class_delete',{'id':c.id})}}">Delete</a></td>
+                              </tr>
+                          {% endfor %}
+                          
+                        </tbody>
+                      </table>
+                    </div>
+                </div>
+                </div>
+                </div>
 {% endblock %}
